--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,14 @@ after_success:
   - docker push leearnold/dc-server
   - docker push leearnold/dc-worker
 
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-complex"
+  env: "Dockercomplex-env"
+  bucket_name: "elasticbeanstalk-us-east-2-114682673195"
+  bucket_path: "docker-complex"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
